--- a/XEX Assistant/MainWindow.xaml
+++ b/XEX Assistant/MainWindow.xaml
@@ -10,9 +10,22 @@
         params:Manager.AccentBrush="BlueViolet"
         params:Manager.ContrastBrush="White"
         DataContext="{Binding RelativeSource={RelativeSource Self}}"
-        Title="Value Tester" Height="317.781" Width="630.366" Loaded="Window_Loaded_1">
+        Title="Value Tester" Height="323.781" Width="630.366" Loaded="Window_Loaded_1">
+    <Controls:Window.ApplicationBar>
+        <Controls:ApplicationBar>
+
+            <Controls:DropDownCommandButton x:Name="nextValueButton" Header="Next Value" Click="nextValueButton_Click" Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}" >
+                <Image Width="20" Height="20" Source="next1.png"/>
+            </Controls:DropDownCommandButton>
+
+            <Controls:DropDownCommandButton x:Name="nextOffsetButton" Header="Next Offset/Batch" Click="nextOffsetButton_Click" Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}" >
+                <Image Width="20" Height="20" Source="next2.png"/>
+            </Controls:DropDownCommandButton>
+
+        </Controls:ApplicationBar>
+    </Controls:Window.ApplicationBar>
     <Grid>
-        <ListView x:Name="offsetsList" ItemsSource="{Binding OffsetCollection}" HorizontalAlignment="Left" Margin="10,10,0,72" Width="319" SelectionMode="Multiple">
+        <ListView x:Name="offsetsList" ItemsSource="{Binding OffsetCollection}" HorizontalAlignment="Left" Margin="10,10,0,83" Width="319" SelectionMode="Multiple">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Width="140" Header="Offset" DisplayMemberBinding="{Binding Address}" />
@@ -21,7 +34,7 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <TextBox x:Name="valuesBox" HorizontalAlignment="Left" Height="57" Margin="10,0,0,10" TextWrapping="Wrap" Text="Enter the values to be tested here. Separate by a comma. Use &quot;DEFAULT&quot; to poke the offset's default value. " VerticalContentAlignment="Top" VerticalAlignment="Bottom" Width="319" AcceptsReturn="True" ToolTip="Seperate values with newline"/>
+        <TextBox x:Name="valuesBox" HorizontalAlignment="Left" Height="57" Margin="10,0,0,21" TextWrapping="Wrap" Text="Enter the values to be tested here. Separate by a comma. Use &quot;DEFAULT&quot; to poke the offset's default value. " VerticalContentAlignment="Top" VerticalAlignment="Bottom" Width="319" AcceptsReturn="True" ToolTip="Seperate values with newline"/>
         <Button x:Name="startButton" Content="Start Testing" HorizontalAlignment="Right" Margin="0,0,10,21" VerticalAlignment="Bottom" Width="102" Click="startButton_Click"/>
         <TextBlock x:Name="loadingBlock" HorizontalAlignment="Left" Margin="127,170,0,0" TextWrapping="Wrap" Text="Loading..." VerticalAlignment="Top" FontSize="20" Visibility="Hidden"/>
         <TextBox x:Name="timeBox" HorizontalAlignment="Right" Height="25" Margin="0,0,62,57" TextWrapping="Wrap" Text="120" VerticalAlignment="Bottom" Width="34" FontSize="13.333"/>
@@ -33,8 +46,8 @@
         <Button x:Name="pauseButton" HorizontalAlignment="Right" Margin="0,0,117,21" VerticalAlignment="Bottom" Width="31" Height="31" Click="pauseButton_Click">
             <Image Source="pause.png"/>
         </Button>
-        <CheckBox x:Name="batchTestingCheck" Content="Enable Batch Testing" HorizontalAlignment="Right" Margin="0,101,9,0" VerticalAlignment="Top" Checked="batchTestingCheck_Checked"/>
+        <CheckBox x:Name="batchTestingCheck" Content="Enable Batch Testing" HorizontalAlignment="Right" Margin="0,101,9,0" VerticalAlignment="Top"/>
         <TextBox x:Name="batchesBox" HorizontalAlignment="Right" Height="24" Margin="0,128,9,0" TextWrapping="Wrap" Text="Offsets per Batch" VerticalAlignment="Top" Width="120"/>
-        <Button Content="NEXT" HorizontalAlignment="Left" Margin="348,236,0,0" VerticalAlignment="Top" Width="82"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,273,0,0" TextWrapping="Wrap" Text="*right-click anywhere for more options/tools" VerticalAlignment="Top"/>
     </Grid>
 </Controls:Window>
